--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v3.1.4
         with:
-          python-version: 3.10
+          python-version: "3.10"
       - name: Run generate.py
         run: |
           python3 generate.py
