--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,7 @@
 on: workflow_dispatch
 permissions:
-  contents: read
+  contents: write
+  pull-requests: write
   issues: read
 jobs:
   generate:
