add issue trigger

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,7 @@
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+  issues:
+    types: [opened, edited, deleted, labeled, unlabeled]
 permissions:
   contents: write
   pull-requests: write
